# fluencebin

./: README.md  package-lock.json  package.json
backend/: Cargo.toml  README.md
backend/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js  actions.js  api.js  index.js  loading.css  modes.js  reducer.js
frontend/src/components/: header.css  header.js  select_language.js
public/: index.html
src/: App.js  api.js  index.js  modes.js  reducer.js
src/components/: header.js  local_mode_toggle.js
